# scope-cleaner

./: .editorconfig  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
scope_cleaner/: __init__.py  magic.py  variable_extraction.py
